deployment/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <product_name>
spec:
  ports:
    - port: 80
      targetPort: <container_port>
      protocol: TCP
  type: NodePort
  selector:
    app: <product_name>
