deployment/k8s/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: projectcontour
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: contour-private
    ports:
    - port: <container_port>
      protocol: TCP
  podSelector:
    matchLabels:
      app: <product_name>
  policyTypes:
  - Ingress
